# osml-imagery-toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PACKAGE_DESCRIPTION.md  README.md  environment-py311.yml  environment-py312.yml  environment-py314.yml  environment-py39.yml  environment.yml  pyproject.toml  tox.ini
.github/: copyright.yaml
.github/workflows/: build-v2.yml  docs-all.yml  pypi-v2.yml  release-v2.yml  release.yml  slack-notify.yml
data/integration/: .gitignore
data/unit/: .gitkeep  dem_chip_10x10.tif  dem_chip_nodata.tif
doc/: version-picker.html
docs/: Makefile  conf.py  index.md
docs/api/: elevation.md  features.md  formats.md  image-processing.md  index.md  metadata.md  photogrammetry.md
docs/design/: index.md  sips-compliance.md
docs/internal/: .gitignore
docs/user-guide/: chip-factory.md  display-processing.md  elevation.md  features.md  getting-started.md  image-pyramids.md  image-warping.md  index.md  migration.md  photogrammetry.md  tiling-and-caching.md
examples/: build_pyramid.py
reference-materials/: .gitignore  CATALOG.md  README.md
src/aws/osml/elevation/: __init__.py  _geo_transform.py  _raster_utils.py  builder.py  dem_tile_factory.py  geometry_condition.py  raster_offset_provider.py  shapefile_query.py
src/aws/osml/features/: __init__.py  geolocation.py  projection.py
src/aws/osml/gdal/: __init__.py  gdal_offset_provider.py  gdal_shapefile_query.py
src/aws/osml/image_processing/: __init__.py  block_utils.py  cached_provider.py  chip_factory.py  chip_metadata_builder.py  color_space.py  complex_remap.py  convolution.py  display_chain_factory.py  downsampled_provider.py  dynamic_range_adjustment.py  image_to_image_grid_builder.py  lut.py  map_tileset.py  map_tileset_wmq.py  mapped_provider.py  ortho_grid_builder.py  processing_chain.py  projected_image_tileset.py  pyramid.py  pyramid_builder.py  resample.py  retiled_provider.py  sicd_updater.py  sidd_updater.py  sips_resample.py  statistics.py  tile_cache.py  warp_grid.py  warped_provider.py
src/aws/osml/metadata/: __init__.py  affine_sensor_model_builder.py  dataset_utils.py  dicttre_utils.py  gcp_sensor_model_builder.py  projective_sensor_model_builder.py  rpc_sensor_model_builder.py  rsm_sensor_model_builder.py  sensor_model_builder.py  sensor_model_factory.py  sicd_sensor_model_builder.py  sidd_sensor_model_builder.py
src/aws/osml/photogrammetry/: __init__.py  affine_sensor_model.py  conditional_elevation_model.py  digital_elevation_model.py  earth_intersection_minimizer.py  eim_neldermead.py  eim_raymarch.py  eim_registry.py  elevation_model.py  em_condition_intersects.py  geometry_query.py  multi_elevation_model.py  offset_elevation_model.py  (+4 more)
test/: conftest.py
test/property/: conftest.py  strategies.py  test_chip_factory_roundtrip.py
test/unit/examples/: test_build_pyramid_script.py
(+77 files in other folders)
